# CaILens

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Chris_Dzombak.md  LICENSE  PLAN.md  PRIVACY.md  README.en.md  README.md  README.zh-CN.md  REASONIX.md  RELEASE.md  capacitor.config.ts  components.json  decisions.md  eslint.config.js  index.html  package-lock.json  package.json  progress.md  prototype.html  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.agnes-code/: desktop-topic-title-sources.json  desktop-topic-titles.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: index.html
docs/ai-design/: prompt-architecture.md
docs/features/: quicklog.md
prototype/: day-view.html  day-view.html.artifact.json  design-system.css  index.html  index.html.artifact.json  plan-log.html  plan-log.html.artifact.json  plan-matrix.html  plan-matrix.html.artifact.json  settings.html  settings.html.artifact.json  stats.html  stats.html.artifact.json  week-view.html  week-view.html.artifact.json
scripts/: copy-release.mjs
src/: App.tsx  index.css  main.tsx  todo-event-trend.md  todo.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_commands.rs  lib.rs
src/constants/: categoryColors.ts
src/data/: adapterFactory.ts  aiChatRepository.ts  aiConversationRepository.ts  aiProviderDefaults.ts  aiRepository.ts  bodyMetricsRepository.ts  categoryRepository.ts  chronicleRepository.ts  contextRepository.ts  db.ts  (+14 more)
(+426 files in other folders)
